add funcionalidades finais e telas

--- a/Versão Nova/html/cadcliente.html
+++ b/Versão Nova/html/cadcliente.html
@@ -14,7 +14,7 @@
     </head>
     
     <body>
-        <h1>Sistema de avaliação</h1>
+        <h1><strong>Sistema de Avaliação</strong></h1>
         <br>
 
         <div class="col-md-4">
@@ -35,7 +35,7 @@
 
                 <button class="btn btn-lg btn-block btn-primary" onclick="cadCliente()">Cadastrar</button>
 
-                <a class="button button-clear" href="index.html" onclick="cleanCadClient()">Voltar para Home</a>
+                <a class="btn btn-lg btn-block btn-primary" href="index.html" onclick="cleanCadClient()">Voltar</a>
             </form>
         </div>
         
