--- a/Versão Nova/html/avaliacao.html
+++ b/Versão Nova/html/avaliacao.html
@@ -95,7 +95,7 @@
 
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                  <button type="button" class="btn btn-primary" onclick="saveav()">Salvar Mudanças</button>
+                  <button type="button" class="btn btn-primary" onclick="saveav()" data-dismiss="modal">Salvar Mudanças</button>
                 </div>
 
               </div>
